fix manga page on mobile

--- a/style.scss
+++ b/style.scss
@@ -341,6 +341,7 @@ footer {
   margin: 20px 0px;
 }
 .manga-img {
+  z-index: -1;
   display: none;
   position: absolute;
   right: 0px;
@@ -358,6 +359,16 @@ footer {
 .manga-item:hover .manga-img {
   display: block;
 }
+# Always hide images on small screens
+@media (max-width: 720px) {
+  .manga-img.default    {
+    display: none;
+  }
+  .manga-item:hover .manga-img {
+    display: none;
+  }
+}
+
 
 .hide {
   display: none;
